--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
     <script src="lrm-openrouteservice-master/lrm-openrouteservice/L.Routing.OpenRouteService.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@mapbox/corslite@0.0.7/corslite.min.js"></script>
-    <script src="node_modules/@mapbox/polyline/src/polyline.js"></script>
+    <script src="../@mapbox/polyline/src/polyline.js"></script>
     <link
       rel="stylesheet"
       href="../Bootstrap/bootstrap-4.5.2-dist/css/stylesheet.css"
